kustomization/manifests/app-test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-test
  labels:
    name: app-test
    istio-injection: enabled
